err/fathom-workloads.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Fathom_Workloads-1.0rc0.egg-info'...
Listing './lib/python3.5/site-packages/fathom'...
Listing './lib/python3.5/site-packages/fathom/alexnet'...
Listing './lib/python3.5/site-packages/fathom/autoenc'...
Listing './lib/python3.5/site-packages/fathom/deepq'...
Compiling './lib/python3.5/site-packages/fathom/deepq/deepq.py'...
***   File "./lib/python3.5/site-packages/fathom/deepq/deepq.py", line 191
    print 'Building QNet and targetnet...'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fathom/deepq/emulator.py'...
***   File "./lib/python3.5/site-packages/fathom/deepq/emulator.py", line 19
    print 'No ROM file found at "'+romfile+'".\nAdjust ROM_PATH or double-check the filt exists.'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fathom/imagenet'...
Compiling './lib/python3.5/site-packages/fathom/imagenet/imagenet.py'...
***   File "./lib/python3.5/site-packages/fathom/imagenet/imagenet.py", line 127
    print "Iter " + str(step*self.batch_size) + ", Minibatch Loss= " + "{:.6f}".format(loss_value) + ", Training Accuracy= " + "{:.5f}".format(acc)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fathom/memnet'...
Listing './lib/python3.5/site-packages/fathom/residual'...
Listing './lib/python3.5/site-packages/fathom/seq2seq'...
Listing './lib/python3.5/site-packages/fathom/speech'...
Compiling './lib/python3.5/site-packages/fathom/speech/preproc.py'...
***   File "./lib/python3.5/site-packages/fathom/speech/preproc.py", line 89
    raise Exception, "not a valid TIMIT dirpath"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fathom/speech/speech.py'...
***   File "./lib/python3.5/site-packages/fathom/speech/speech.py", line 225
    print 'Starting run...'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fathom/vgg'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
